<resources>
    <string name="app_name">TheUserEntry</string>
    <string name="home">Home (By Jesse Aboh)</string>
    <string name="splash_text">Welcome!</string>

    <string name="input_type">Input Type</string>
    <string name="scan_drivers_license">Scan Drivers License</string>
    <string name="enter_manually">Enter Manually</string>

    <string name="no_list_of_persons">No List of Persons</string>
    <string name="list_of_persons">List Of Persons</string>

    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="out_of_range_date_message">Date selected is out of range</string>

    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="add_person">Add Person</string>
    <string name="update_person">Update Person</string>

    <string name="date_of_birth">Date of Birth</string>
    <string name="user_must_be_over_15">User must be over the age of 15</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="zipcode">Zipcode</string>

    <string name="ok">Ok</string>

    <!--Barcode scanner strings-->
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>


    <string name="id">Id</string>
    <string name="state">State</string>
    <string name="address">Address</string>
    <string name="expires">Expires</string>
    <string name="expired">Expired</string>

    <string name="please_scan_your_drivers_license">Scan the back of your driver\'s license for an easier sign up process.</string>
    <string name="locate_the_barcode_on_the_back">1. Locate the barcode on the back</string>
    <string name="align_the_barcode_on_the_red_line">2. Align the barcode on the red line</string>

</resources>
